Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
   data-wf-site="65171aaa9cd9b29759c30bbf"
 >
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-7629WKDCDS"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-7629WKDCDS");
+    </script>
+
     <meta charset="utf-8" />
     <title>SILVBEL - Designer &amp; Developer</title>
     <meta
